# bmptg

./: .gitignore  .gitmodules  README.md  clean.bat
ImgFmt/: JpgDecoder.cpp  JpgDecoder.hpp  JpgEncoder.cpp  PngDecoder.cpp  PngDecoder.hpp  PngEncoder.cpp  beta.c  beta.h  bmp_read.c  bmp_read.h  bmp_wrt.c  clean_turbojpeg.bat  mk_mozjpeg.bat  mk_turbojpeg.bat  tga_read.c  tga_read.h  tga_wrt.c
ImgFmt/old/: mk_turbojpeg.bat
Proc/: BppCnvImg.hpp  DecreaseColorHst.hpp  DecreaseColorIfWithin256.hpp  DecreaseColorLowBpp.hpp  ErrorDiffusion1b.hpp  FixedClut256.hpp  GrayClut.hpp  PaternDither.hpp  pix32.c  pix32.h  pix32_bokashi.h  pix32_colCnv.h  pix32_filter.cpp  pix32_filter.h  pix32_kyuv.h  pix32_paint.hpp  pix32_resize.h  pix32_resizeAveragingI.c  pix32_resizeBicubic.c  pix32_resizeBicubic.h  pix32_resizeBilinear.h  pix32_resizeLanczos3.c  pix32_resizeLanczos3.h  pix32_resizeNearest.h  pix32_resizeNearestNeighbor.c  pix32_resizeNearestNeighbor.h  pix32_resizeSpline36.c  pix32_resizeSpline36.h  pix32_rotate.h  pix32_rotateBicubic.c  pix32_rotateBilinear.c  pix32_rotateSpline36.c  pix8.c  pix8.h  pix_subr.h
Proc_Test/: DecreaseColorIfWithin256.h  DecreaseColorT2.h  DecreaseColorWin256.h  mk_smp_decreaseColor.bat  smp_BppCnvImg.vcproj  smp_decreaseColor.cpp  smp_decreaseColor.vcproj  test.bat
Ruig/: ImgLoader.hpp  NamedImg.hpp  Ruig-t.sln  Ruig-t.vcxproj  Ruig-t.vcxproj.filters  Ruig-vc9.sln  Ruig-vc9.vcproj  Ruig.cpp  Ruig.sln  Ruig.txt  Ruig.vcxproj  Ruig.vcxproj.filters  RuigMgr.cpp  RuigMgr.hpp  stdafx.cpp  stdafx.h
Ruig/old/: Ruig-vc9.vcproj  Ruig.sln  Ruig.vcxproj  Ruig.vcxproj.filters  ruig_compile.txt
bld/: bld.txt  bmptg_bld.bat  gen_bmptg.bat  gen_ruig.bat  ruig_bld.bat
bmptg/: BmImgLoad.cpp  BmImgLoad.h  BmImgSave.cpp  BmImgSave.h  ConvOne.cpp  ConvOne.hpp  bmptg-moz.mak  bmptg-mz.vcxproj  bmptg-tj.mak  bmptg-tj.sln  bmptg-tj.vcproj  bmptg-tj.vcxproj  bmptg-tj.vcxproj.filters  bmptg.cpp  bmptg.doxy  bmptg.mak  bmptg.sln  bmptg.txt  bmptg.vcproj  bmptg.vcxproj  bmptg.vcxproj.filters  bmptg_compile.txt  bmptg_his.txt  clean.bat  gen.h  gen_clm8.c  gen_clmp.c  mk_bcc.bat  mk_dmc.bat  mk_mingw.bat  mk_vc.bat  mk_vc_moz.bat  mk_vc_tj.bat  mk_wat.bat  stdafx.h
bmptg/old/: bmptg-moz.mak  bmptg.sln  bmptg.vcproj
bmptg_smp/: cnv_book.bat  cnv_fmt.bat  cnv_misc.bat  cnv_paint.bat  cnv_recol.bat  cnv_resize.bat  cnv_resize_to_large.bat  cnv_rot.bat  set1st.bat
ifbmp/: ifbmp.txt  ifbmp.vcproj  mk_ifbmp.bat
iffontx2/: FontX2Data.h  ifFontX2.vcproj  mk_ifFontX2.bat
ifpng/: SpiRead_Png.cpp  ifpng.sln  ifpng.txt  ifpng.vcproj
iftga/: bmk_iftga.bat  iftga.his  iftga.sln  iftga.txt  iftga.vcproj  mk_iftga.bat
misc/: File.hpp  HuffmanDecode.hpp  HuffmanEncode.hpp  StrExpr.c  dbg.c  def.h  file_hdl.h  file_hdl.hpp  file_hdl_puts.h  fks_file_time.c  fname.c  mem_mac.h  nth_element.hpp  subr.c
misc/atode/: fname.hpp  tiny_twlink.hpp
misc/vc/: cstdint  stdint.h
sample/: chk_rgbyuv.cpp  mk_clajpgwh.bat  mk_smp_bmp2tga.bat  mk_smp_jpg2tga.bat  mk_smp_png2tga.bat  mk_smp_tga2bmp.bat  rgb2yuv_10to16.c  smp_bmp2tga.vcproj  smp_jpg2tga.cpp  yuv2rgb_10to16.c
sample/scrap/: clut256_grb666_40.cpp  clut256_xterm.cpp  clut256_yuv577.cpp  clut256_yuv766.cpp
smp/: cnv_book.bat  cnv_fmt.bat  cnv_misc.bat  cnv_paint.bat  cnv_recol256.bat  cnv_recolDig.bat  cnv_recolFix256.bat  cnv_recolMono.bat  cnv_resize.bat  cnv_resize_to_large.bat  cnv_rot.bat  cnv_sml.bat  readme.txt  set1st.bat
spi/: RegOpt.c  RegOpt.h  Spi.def
spi/ifbmp/: SpiRead_Bmp.c  ifbmp.sln  ifbmp.vcproj
spi/iffontx2/: SpiRead_Fontx2.cpp  ifFontX2.sln  ifFontX2.txt  ifFontX2.vcproj
spi/ifpng/: SpiRead_Png.cpp  ifpng.sln  ifpng.vcproj
spi/iftga/: SpiRead_Tga.c  iftga.sln  iftga.vcproj
spi/spi/: Spi.def  SpiMain.c  SpiRead.h
spi/tspiro/: gr.c  gr.h  tspiro.htm  tspiro.rc  tspiro.sln
src/ImgFmt/: JpgDecoder.cpp  JpgDecoder.hpp  JpgEncoder.cpp  JpgEncoder.hpp  PngDecoder.cpp  PngDecoder.hpp  PngEncoder.cpp  PngEncoder.hpp  beta.c  beta.h  bmp_read.c  bmp_read.h  bmp_wrt.c  bmp_wrt.h  tga_read.c  tga_read.h  tga_wrt.c  tga_wrt.h
src/Proc/: BppCnvImg.hpp  DecreaseColorHst.hpp  DecreaseColorIfWithin256.hpp  DecreaseColorLowBpp.hpp  DecreaseColorMC.hpp  ErrorDiffusion.hpp  ErrorDiffusion1b.hpp  FixedClut256.hpp  GrayClut.hpp  PaternDither.hpp  pix32.c  pix32.h  pix32_bokashi.h  pix32_colCnv.h  pix32_filter.cpp  pix32_filter.h  pix32_kyuv.c  pix32_kyuv.h  pix32_paint.hpp  pix32_resize.h  pix32_resizeAveragingI.c  pix32_resizeAveragingI.h  pix32_resizeBicubic.c  pix32_resizeBicubic.h  pix32_resizeBilinear.c  pix32_resizeBilinear.h  pix32_resizeBilinearAlpha.cpp  pix32_resizeLanczos3.c  pix32_resizeLanczos3.h  pix32_resizeNearestNeighbor.c  pix32_resizeNearestNeighbor.h  pix32_resizeSpline36.c  pix32_resizeSpline36.h  pix32_rotate.h  pix32_rotateBicubic.c  pix32_rotateBilinear.c  pix32_rotateBilinearAlpha.c  pix32_rotateSpline36.c  pix8.c  pix8.h  (+1 more)
src/Proc_Test/: DecreaseColorIfWithin256.h  DecreaseColorMC1.h  DecreaseColorMC2.h  DecreaseColorT1.h  DecreaseColorT2.h  DecreaseColorT3.h  DecreaseColorWin256.h  ReduceColorHist.h  ReduceColorT3_yuv.h  smp_BppCnvImg.cpp  smp_decreaseColor.cpp  smp_decreaseColor.vcproj  test.bat
src/Ruig/: CmakeLists.txt  ExArgv_conf.h  NamedImg.hpp  Ruig.cpp  Ruig.txt  RuigMgr.cpp  RuigMgr.hpp  stdafx.h  targetver.h
src/bmptg/: BmImgLoad.cpp  BmImgLoad.h  BmImgSave.cpp  BmImgSave.h  CMakeLists.txt  ConvOne.cpp  ConvOne.hpp  ExArgv_conf.h  bmptg-tj.vcxproj  bmptg.cpp  gen.cpp  gen.h  gen_clm8.c  gen_clmp.c  stdafx.h
src/bmptg/old/: bmptg-mz.sln  bmptg-tj.mak  bmptg-tj.sln  bmptg-tj.vcxproj.filters  bmptg.txt  bmptg_compile.txt  bmptg_his.txt  clean.bat  mk_bcc.bat  mk_dmc.bat  mk_mingw.bat  mk_vc.bat  mk_vc_moz.bat  mk_vc_tj.bat
src/misc/: ExArgv.c  ExArgv.h  File.hpp  HuffmanDecode.hpp  HuffmanEncode.hpp  PerfCnt.h  StrExpr.c  dbg.c  def.h  fks_file_time.c  fks_file_time.h  intrusive_ptr.hpp  intrusive_ptr_ref_count.hpp  mem_mac.h  misc.hpp  subr.c  subr.h
src/sample/: chk_rgbyuv.cpp  (+11 more)
tspiro/: mk.bat  resource.h  sus.txt  tspiro.c  tspiro.rc  tspiro.sln  tspiro.vcproj
(+17 files in other folders)
